--- a/code/exploratory.ipynb
+++ b/code/exploratory.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1602177127769",
+   "name": "python_defaultSpec_1602180130390",
    "display_name": "Python 3.6.11 64-bit ('gds': conda)",
    "metadata": {
     "interpreter": {
@@ -28,44 +28,53 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named &#39;spint&#39;",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m&lt;ipython-input-2-28c7aa1416fe&gt;\u001b[0m in \u001b[0;36m&lt;module&gt;\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mgeopandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mgpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----&gt; 5\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mspint\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named &#39;spint&#39;"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import geopandas as gpd\n",
     "import matplotlib.pyplot as plt\n",
-    "import spint"
+    "from spint.gravity import Gravity, Production\n",
+    "from spopt import MaxPHeuristic, RegionKMeansHeuristic, WardSpatial"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "county_level = pd.read_csv('../data/weekly_county2county_08_10.csv', usecols=['geoid_o', 'geoid_d', 'visitor_flows', 'pop_flows'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ct_level = pd.read_csv('../data/weekly_ct2ct_08_10.csv', nrows=10, usecols=['geoid_o', 'geoid_d', 'visitor_flows', 'pop_flows'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "\u001b[31mERROR: Could not find a version that satisfies the requirement spopt (from versions: none)\u001b[0m\n\u001b[31mERROR: No matching distribution found for spopt\u001b[0m\n"
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "      geoid_o     geoid_d  visitor_flows  pop_flows\n0  1001020100  1001020100              8       85.0\n1  1001020100  1001020200            109     1171.0\n2  1001020100  1001020300            105     1128.0\n3  1001020100  1001020400             29      311.0\n4  1001020100  1001020500            328     3525.0\n5  1001020100  1001020600             20      214.0\n6  1001020100  1001020700            109     1171.0\n7  1001020100  1001020801             13      139.0\n8  1001020100  1001020802             12      128.0\n9  1001020100  1001020900              4       42.0",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>geoid_o</th>\n      <th>geoid_d</th>\n      <th>visitor_flows</th>\n      <th>pop_flows</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1001020100</td>\n      <td>1001020100</td>\n      <td>8</td>\n      <td>85.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1001020100</td>\n      <td>1001020200</td>\n      <td>109</td>\n      <td>1171.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1001020100</td>\n      <td>1001020300</td>\n      <td>105</td>\n      <td>1128.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1001020100</td>\n      <td>1001020400</td>\n      <td>29</td>\n      <td>311.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1001020100</td>\n      <td>1001020500</td>\n      <td>328</td>\n      <td>3525.0</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>1001020100</td>\n      <td>1001020600</td>\n      <td>20</td>\n      <td>214.0</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>1001020100</td>\n      <td>1001020700</td>\n      <td>109</td>\n      <td>1171.0</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>1001020100</td>\n      <td>1001020801</td>\n      <td>13</td>\n      <td>139.0</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>1001020100</td>\n      <td>1001020802</td>\n      <td>12</td>\n      <td>128.0</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>1001020100</td>\n      <td>1001020900</td>\n      <td>4</td>\n      <td>42.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 9
     }
    ],
    "source": [
-    "!python3 -m pip install spopt"
+    "ct_level"
    ]
   },
   {
